open manual browser on mac via 'open -a'